Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124235

Too small minimumSizeHint for QDateEdit/QDateTimeEdit with windows11-style

XMLWordPrintable

    • Windows
    • b457376c0 (dev), 495e5cbbb (6.7), 5a1ea842c (dev), d6f33a70c (6.8), 916d7ee14 (6.7)

      Qt user reported following:

      "

      The dates in the QDateEdit/QDateTimeEdit are cut off in windows11-style when space is limited.
      In the other styles, the dates are always completely visible.

      The affected QT version is Qt 6.7.0, MSVC 2019 64-bit.

      "

        1. SizeHintExample.zip
          2 kB
        2. sampleProject_screen_output.png
          sampleProject_screen_output.png
          4 kB
        3. image-2024-08-28-05-41-10-570.png
          image-2024-08-28-05-41-10-570.png
          9 kB
        4. image-2024-08-28-05-42-29-802.png
          image-2024-08-28-05-42-29-802.png
          72 kB
        5. image-2024-08-28-05-43-57-514.png
          image-2024-08-28-05-43-57-514.png
          15 kB
        6. getDouble_Qt6.6.3.png.png
          getDouble_Qt6.6.3.png.png
          6 kB
        7. getDouble_Qt6.7.2.png.png
          getDouble_Qt6.7.2.png.png
          6 kB
        8. getDouble_Qt6.8.0-beta4.png
          getDouble_Qt6.8.0-beta4.png
          6 kB
        9. screenshot-1.png
          screenshot-1.png
          31 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            wladimir.leuschner Wladimir Leuschner
            tero.pelkonen Tero Pelkonen
            Votes:
            0 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved: