QWindows11Style: Increase min size of QAbstractSpinbox Widgets

With WinUI3 a new layout of the lineedit and buttons was introduced. The
buttons are now aligned horizontally instead of vertically. Trying to
mimic that layout in widgets results in too few space for the text in
the lineedit. This patch increases the minimum width when using the
QWindows11Style for QAbstractSpinBox elements and saves the original
width in a property in case the style is changed at runtime to restore
the original geometry.

Fixes: QTBUG-124235
Fixes: QTBUG-124150
Change-Id: I8067b338fa4a2c1efd0a1b0644fb8a563601385b
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit b457376c038acc0c1cb9a0966508b4999314ea86)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>